# calculator

./: .gitignore  README.md  advanced_calculator.css  advanced_calculator.html  advanced_calculator.js  calculator.css  calculator.html  calculator.js  calculator.py  gui_calculator.py  main.py  pyproject.toml  ultimate_calculator.css  ultimate_calculator.html  ultimate_calculator.js
